infra/k8s/cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: skn1942/ftgo-cart:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 9994
---
apiVersion: v1
kind: Service
metadata:
  name: cart-srv
spec:
  selector:
    app: cart
  ports:
    - name: cart
      protocol: TCP
      port: 9994
      targetPort: 9994
