infra/k8s/cart-pg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-pg-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-pg
  template:
    metadata:
      labels:
        app: cart-pg
    spec:
      containers:
        - name: cart-pg
          image: postgres:latest
---
apiVersion: v1
kind: Service
metadata:
  name: cart-pg-srv
spec:
  selector:
    app: cart-pg
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
