infra/k8s/gateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: skn1942/ftgo-gateway:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 9992
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-srv
spec:
  selector:
    app: gateway
  ports:
    - name: gateway
      protocol: TCP
      port: 9992
      targetPort: 9992
