infra/k8s/restaurant-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
        - name: restaurant
          image: skn1942/ftgo-restaurant:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 9991
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-srv
spec:
  selector:
    app: restaurant
  ports:
    - name: restaurant
      protocol: TCP
      port: 9993
      targetPort: 9993
